--- a/app/src/main/res/layout/fragment_for_a_carousel_of_puzzles.xml
+++ b/app/src/main/res/layout/fragment_for_a_carousel_of_puzzles.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             tools:context=".ui.for_a_corusel_of_puzzles.ForACarouselOfPuzzlesFragment" android:id="@+id/fl">
+             tools:context=".ui.for_a_corusel_of_puzzles.ForACarouselOfPuzzlesFragment"
+             android:id="@+id/fl"
+>
     <ImageView
-            android:src="@drawable/pazl0"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/imgPZL"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/imgPZL"
+            android:contentDescription="@string/todo"
+            android:layout_margin="2dp"/>
 </FrameLayout>
