--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -123,7 +123,6 @@
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img3"
                    app:layout_constraintTop_toTopOf="parent"/>
-
         <ImageView android:layout_width="100dp"
                    android:layout_height="130dp"
                    android:id="@+id/img5"
@@ -134,14 +133,12 @@
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img4"
                    app:layout_constraintTop_toTopOf="parent"/>
-
         <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintGuide_begin="100dp"/>
-
         <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
                 android:layout_width="wrap_content"
@@ -171,6 +168,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:gravity="center"/>
+    <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
     <androidx.constraintlayout.motion.widget.MotionLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
@@ -254,14 +252,15 @@
                 android:layout_height="wrap_content"
                 app:carousel_forwardTransition="@+id/forward"
                 app:carousel_backwardTransition="@+id/backward"
-                app:carousel_previousState="@+id/previous"
-                app:carousel_nextState="@+id/next"
+                app:carousel_previousState="@+id/previousPazl"
+                app:carousel_nextState="@+id/nextPazl"
                 app:carousel_firstView="@+id/imgPazl3"
                 app:carousel_touchUpMode="carryVelocity"
                 app:carousel_infinite="true"
                 app:carousel_touchUp_dampeningFactor="0.8"
                 app:constraint_referenced_ids="imgPazl1, imgPazl2, imgPazl3, imgPazl4, imgPazl5" />
     </androidx.constraintlayout.motion.widget.MotionLayout>
+    <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/frameLayoutFairies"
@@ -310,4 +309,7 @@
                  android:id="@+id/frameLayoutPazl"
                  android:visibility="gone">
     </FrameLayout>
+    <TextView android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+    android:id="@+id/outTest"/>
 </LinearLayout>
