--- a/app/src/main/res/layout/fragment_of_the_game.xml
+++ b/app/src/main/res/layout/fragment_of_the_game.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="horizontal" android:paddingTop="20dp">
 
         <TextView
                 android:id="@+id/textViewTimeGame"
@@ -196,12 +196,4 @@
                     android:paddingEnd="10dp"/>
         </LinearLayout>
     </LinearLayout>
-    <ImageView android:layout_width="100dp"
-               android:layout_height="100dp"
-               android:id="@+id/img_hint"
-               android:src="@drawable/hint"
-               android:layout_marginEnd="10dp"
-               android:padding="10dp"
-               android:contentDescription="@string/todo"
-               android:visibility="gone"/>
 </LinearLayout>
