--- a/app/src/main/res/layout/fragment_traffic_laws.xml
+++ b/app/src/main/res/layout/fragment_traffic_laws.xml
@@ -9,7 +9,7 @@
     <ImageView
             android:src="@drawable/pdd_img"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:id="@+id/imageViewPdd"
             android:contentDescription="@string/todo"/>
     <Button android:text="@string/start"
