--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,12 @@
         android:padding="5dp"
         android:gravity="center|top"
         android:orientation="vertical">
+    <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:id="@+id/progressBarLoadQuiz"/>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
