--- a/app/src/main/res/layout/fragment_school.xml
+++ b/app/src/main/res/layout/fragment_school.xml
@@ -9,9 +9,8 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:orientation="horizontal"
-            android:id="@+id/linearLayout1">
+            android:id="@+id/linearLayout1" android:gravity="center">
 
         <ImageButton
                 android:id="@+id/button_mathematics"
@@ -30,6 +29,7 @@
                 android:id="@+id/button_physics"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
+                android:layout_margin="30dp"
                 android:background="@drawable/button_lihguistics"
                 android:contentDescription="@string/todo"
                 android:elevation="15dp"
@@ -60,12 +60,14 @@
                 android:id="@+id/button_geografik"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
+                android:layout_margin="30dp"
                 android:background="@drawable/button_lihguistics"
                 android:contentDescription="@string/todo"
                 android:elevation="15dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/geografik"
-                android:stateListAnimator="@null" android:padding="15dp"/>
+                android:stateListAnimator="@null"
+                android:padding="15dp"/>
     </LinearLayout>
     <LinearLayout
             android:layout_width="match_parent"
@@ -84,7 +86,21 @@
                 android:elevation="15dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/history"
-                android:stateListAnimator="@null" android:padding="20dp"/>
+                android:stateListAnimator="@null"
+                android:padding="20dp"/>
+        <!--<ImageButton
+                android:id="@+id/button_social_studies"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_margin="30dp"
+                android:background="@drawable/button_lihguistics"
+                android:contentDescription="@string/todo"
+                android:elevation="15dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/social_studies"
+                android:stateListAnimator="@null"
+                android:padding="20dp"
+        />-->
 
     </LinearLayout>
     <FrameLayout
